// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - Living Edge Lab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";

package steeleagle.controlplane;
import "steeleagle/common.proto";
//import "google/protobuf/empty.proto";
//import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message Request {
  int64 seq_num = 1;  // for correlation
  google.protobuf.Timestamp timestamp = 2; // time the request was made
  oneof type {
    VehicleControl veh = 3; 
    MissionControl msn = 4; 
    ConfigureCompute cpt = 5;
  }
  repeated string drone_ids = 6;
}

message Response {
  int64 seq_num = 1; // for correlation
  google.protobuf.Timestamp timestamp = 2;// time the response was sent
  steeleagle.shared.ResponseStatus resp = 3;
}

/*
* MANUAL # assume the velocity control drone
*/
message VehicleControl {
  oneof param {
    VehicleAction action = 1;
    steeleagle.shared.Location location = 2; 
    steeleagle.shared.Velocity velocity = 3;
    steeleagle.shared.Pose gimbal_pose = 4; 
    steeleagle.shared.Position position = 5; 
    sfixed32 camera_id = 6;
  }  
}

enum VehicleAction {
  UNKNOWN_VEHICLE_ACTION = 0;
  TAKEOFF = 1;
  LAND = 2;
  HOVER = 3;
  KILL = 4;
  RTH = 5;
}


/*
* AUTO
*/
message MissionControl {
  string UUID = 1; // unique mission reference for cataloging
  string URL = 2; // the URL that specifies the zip file to download
  MissionAction action = 3; // start/stop/pause/resume/download
}
enum MissionAction {
  UNKNOWN_MISSION_ACTION = 0;
  START = 1;
  STOP = 2;
  PAUSE = 3;
  RESUME = 4;
  DOWNLOAD = 5;
}

/*
* COMPUTE
*/
message ConfigureCompute {
    string model = 1; // change model current in use
    steeleagle.shared.HSV lower_bound = 2; // lower bound of HSV filter to apply
    steeleagle.shared.HSV upper_bound = 3; // upper bound of HSV filter to apply
    float threshold = 4; //change confidence threshold of the DNN
}
